--- a/src/Components/SearchFunctionality/SearchFunctionality.module.css
+++ b/src/Components/SearchFunctionality/SearchFunctionality.module.css
@@ -1,10 +1,10 @@
 .resultsContainer {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
 
 .resultsContainer.forecastContainer {
   margin: auto;
   max-width: 99%;
-  overflow-x: scroll;
 }
