--- a/src/Components/UI/Background.module.css
+++ b/src/Components/UI/Background.module.css
@@ -1,6 +1,6 @@
 .appContainer {
-  min-width: 100%;
-  min-height: 100%;
+  height: 100%;
+  width: 100%;
   background-size: cover;
   background-position: center;
 }
